--- a/src/components/Wishlist/Products/Buttons/buttons.module.scss
+++ b/src/components/Wishlist/Products/Buttons/buttons.module.scss
@@ -1,11 +1,13 @@
 .buttons {
   display: flex;
   justify-content: space-between;
+  margin: 0 0 20px 0;
 
   &__block {
     display: flex;
     gap: 20px;
     align-items: center;
+    flex-wrap: wrap;
   }
 
   &__button {
